# FittinTest

./: .env  .env.template  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
myshop/: db.sqlite3  dbdump.json
myshop/cart/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
myshop/cart/migrations/: 0001_initial.py  0002_alter_cart_user.py
myshop/myauth/: serializer.py  tests.py  urls.py  views.py
myshop/myshop/: settings.py  urls.py
myshop/order/: admin.py  common.py  models.py  serializer.py  tests.py  urls.py  views.py
myshop/order/migrations/: 0001_initial.py  0002_remove_order_is_paid.py
myshop/product/: admin.py  forms.py  models.py  serializer.py  tests.py  urls.py  views.py
myshop/product/migrations/: 0001_initial.py
